--- a/scrapyd/default_scrapyd.conf
+++ b/scrapyd/default_scrapyd.conf
@@ -35,20 +35,23 @@ jobstorage        = scrapyd.jobstorage.MemoryJobStorage
 finished_to_keep  = 100
 
 # Directory options
-dbs_dir           = dbs
+dbs_dir                   = dbs
 
 [services]
-schedule.json      = scrapyd.webservice.Schedule
-cancel.json        = scrapyd.webservice.Cancel
-status.json        = scrapyd.webservice.Status
-addversion.json    = scrapyd.webservice.AddVersion
-listprojects.json  = scrapyd.webservice.ListProjects
-listversions.json  = scrapyd.webservice.ListVersions
-listspiders.json   = scrapyd.webservice.ListSpiders
-delproject.json    = scrapyd.webservice.DeleteProject
-delversion.json    = scrapyd.webservice.DeleteVersion
-listjobs.json      = scrapyd.webservice.ListJobs
-daemonstatus.json  = scrapyd.webservice.DaemonStatus
-spiderStatus.json  = scrapyd.webservice.SpiderStatus
-spiderLogs.json    = scrapyd.webservice.SpiderLogs
-spiderResults.json = scrapyd.webservice.SpiderResults
+schedule.json             = scrapyd.webservice.Schedule
+cancel.json               = scrapyd.webservice.Cancel
+status.json               = scrapyd.webservice.Status
+addversion.json           = scrapyd.webservice.AddVersion
+listprojects.json         = scrapyd.webservice.ListProjects
+listversions.json         = scrapyd.webservice.ListVersions
+listspiders.json          = scrapyd.webservice.ListSpiders
+delproject.json           = scrapyd.webservice.DeleteProject
+delversion.json           = scrapyd.webservice.DeleteVersion
+listjobs.json             = scrapyd.webservice.ListJobs
+daemonstatus.json         = scrapyd.webservice.DaemonStatus
+spiderStatus.json         = scrapyd.webservice.SpiderStatus
+spiderLogs.json           = scrapyd.webservice.SpiderLogs
+spiderResults.json        = scrapyd.webservice.SpiderResults
+spiderStorage.json        = scrapyd.webservice.SpiderStorage
+spiderDownloadResult.json = scrapyd.webservice.SpiderDownloadResult
+spiderDownloadLog.json    = scrapyd.webservice.SpiderDownloadLog
